update deps encoders should use direct StandardCharsets added some TODO for not understood nonsense code